Fix notification focus painter related bugs.

This CL fixes these focus painter related bugs of notification:

- Focus painter for the expand button was not rendered correctly.
  (https://crbug.com/778208)

- Expand button wasn't rendered initially, because
  NotificationHeaderView::Layout() wasn't called after
  NotificationHeaderView::SetExpandButtonEnabled() update.

- Focus painter for the entire notification was not rendered correctly,
  due to recent shadow removal (https://crrev.com/c/722303).
  Related bug: https://crrev.com/c/737690

TEST=manual
BUG=778208

Change-Id: Ieeeb3a8b4bf3df0fda32b7c237ba78d942ab6b5a
Reviewed-on: https://chromium-review.googlesource.com/737503
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512093}
Former-commit-id: 45c31c31b68a759fde3f2693ea27a23060979938